--- a/index.html
+++ b/index.html
@@ -37,20 +37,109 @@
       </div>
     </section>
 
-    
-    
+    <section class="second-section">
+
+      <div class="card">
+        <div class="card__background">
+          <img src="./images/icon-work.svg" alt="work-icon">
+        </div>
+        <div class="card__details">
+          <div class="card__activity">
+            <p class="card__title">Work</p>
+            <img src="./images/icon-ellipsis.svg" alt="three points">
+          </div>
+          <div class="card__hours">
+            <p class="card__hour">5hrs</p>
+            <p class="card__previous">Previous - 7hrs</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="card">
+        <div class="card__background">
+          <img src="./images/icon-work.svg" alt="work-icon">
+        </div>
+        <div class="card__details">
+          <div class="card__activity">
+            <p class="card__title">Work</p>
+            <img src="./images/icon-ellipsis.svg" alt="three points">
+          </div>
+          <div class="card__hours">
+            <p class="card__hour">5hrs</p>
+            <p class="card__previous">Previous - 7hrs</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="card">
+        <div class="card__background">
+          <img src="./images/icon-work.svg" alt="work-icon">
+        </div>
+        <div class="card__details">
+          <div class="card__activity">
+            <p class="card__title">Work</p>
+            <img src="./images/icon-ellipsis.svg" alt="three points">
+          </div>
+          <div class="card__hours">
+            <p class="card__hour">5hrs</p>
+            <p class="card__previous">Previous - 7hrs</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="card">
+        <div class="card__background">
+          <img src="./images/icon-work.svg" alt="work-icon">
+        </div>
+        <div class="card__details">
+          <div class="card__activity">
+            <p class="card__title">Work</p>
+            <img src="./images/icon-ellipsis.svg" alt="three points">
+          </div>
+          <div class="card__hours">
+            <p class="card__hour">5hrs</p>
+            <p class="card__previous">Previous - 7hrs</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="card">
+        <div class="card__background">
+          <img src="./images/icon-work.svg" alt="work-icon">
+        </div>
+        <div class="card__details">
+          <div class="card__activity">
+            <p class="card__title">Work</p>
+            <img src="./images/icon-ellipsis.svg" alt="three points">
+          </div>
+          <div class="card__hours">
+            <p class="card__hour">5hrs</p>
+            <p class="card__previous">Previous - 7hrs</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="card">
+        <div class="card__background">
+          <img src="./images/icon-work.svg" alt="work-icon">
+        </div>
+        <div class="card__details">
+          <div class="card__activity">
+            <p class="card__title">Work</p>
+            <img src="./images/icon-ellipsis.svg" alt="three points">
+          </div>
+          <div class="card__hours">
+            <p class="card__hour">5hrs</p>
+            <p class="card__previous">Previous - 7hrs</p>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
-
-  
- 
-
   
   
-  
-
-  Work
-  5hrs <!-- daily -->
-  Previous - 7hrs <!-- daily -->
+   <!-- daily -->
+  <!-- daily -->
   32hrs <!-- weekly -->
   Previous - 36hrs <!-- weekly -->
   103hrs <!-- monthly -->
