importando tipografias a utilizar

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
   
   <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="https://github.com/VictorR29">Victor Ramones</a>.
+    Coded by <a href="https://github.com/VictorR29" target="_blank">Victor Ramones</a>.
   </footer>
 
   <script src="./main.js"></script>
