Estilizando main-card__user y main-card__dates

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <div class="main-card">
 
         <div class="main-card__user">
-          <img class="main-card__image" src="./images/image-jeremy.png" alt="user">
+          <img class="main-card__img" src="./images/image-jeremy.png" alt="user">
           <div>
             <p class="main-card__title">Report for</p>
             <p class="main-card__name">Jeremy Robson</p>
