Estilizando cards y finalizando con los estilos mobile

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
       <div class="card">
         <div class="card__background">
-          <img src="./images/icon-work.svg" alt="work-icon">
+          <img class="card__img" src="./images/icon-work.svg" alt="work-icon">
         </div>
         <div class="card__details">
           <div class="card__activity">
