--- a/index.html
+++ b/index.html
@@ -50,85 +50,6 @@
         </div>
       </div>
 
-      <div class="card">
-        <div class="card__background">
-          <img src="./images/icon-work.svg" alt="work-icon">
-        </div>
-        <div class="card__details">
-          <div class="card__activity">
-            <p class="card__title">Work</p>
-            <img src="./images/icon-ellipsis.svg" alt="three points">
-          </div>
-          <div class="card__hours">
-            <p class="card__hour">5hrs</p>
-            <p class="card__previous">Previous - 7hrs</p>
-          </div>
-        </div>
-      </div>
-
-      <div class="card">
-        <div class="card__background">
-          <img src="./images/icon-work.svg" alt="work-icon">
-        </div>
-        <div class="card__details">
-          <div class="card__activity">
-            <p class="card__title">Work</p>
-            <img src="./images/icon-ellipsis.svg" alt="three points">
-          </div>
-          <div class="card__hours">
-            <p class="card__hour">5hrs</p>
-            <p class="card__previous">Previous - 7hrs</p>
-          </div>
-        </div>
-      </div>
-
-      <div class="card">
-        <div class="card__background">
-          <img src="./images/icon-work.svg" alt="work-icon">
-        </div>
-        <div class="card__details">
-          <div class="card__activity">
-            <p class="card__title">Work</p>
-            <img src="./images/icon-ellipsis.svg" alt="three points">
-          </div>
-          <div class="card__hours">
-            <p class="card__hour">5hrs</p>
-            <p class="card__previous">Previous - 7hrs</p>
-          </div>
-        </div>
-      </div>
-
-      <div class="card">
-        <div class="card__background">
-          <img src="./images/icon-work.svg" alt="work-icon">
-        </div>
-        <div class="card__details">
-          <div class="card__activity">
-            <p class="card__title">Work</p>
-            <img src="./images/icon-ellipsis.svg" alt="three points">
-          </div>
-          <div class="card__hours">
-            <p class="card__hour">5hrs</p>
-            <p class="card__previous">Previous - 7hrs</p>
-          </div>
-        </div>
-      </div>
-
-      <div class="card">
-        <div class="card__background">
-          <img src="./images/icon-work.svg" alt="work-icon">
-        </div>
-        <div class="card__details">
-          <div class="card__activity">
-            <p class="card__title">Work</p>
-            <img src="./images/icon-ellipsis.svg" alt="three points">
-          </div>
-          <div class="card__hours">
-            <p class="card__hour">5hrs</p>
-            <p class="card__previous">Previous - 7hrs</p>
-          </div>
-        </div>
-      </div>
     </section>
   </main>
   
@@ -137,6 +58,6 @@
     Coded by <a href="https://github.com/VictorR29" target="_blank">Victor Ramones</a>.
   </footer>
 
-  <script src="./main.js"></script>
+  <script type="module" src="./main.js"></script>
 </body>
 </html>
