--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     <section class="second-section">
 
-      <div class="card">
+      <!-- <div class="card">
         <div class="card__background">
           <img class="card__img" src="./images/icon-work.svg" alt="work-icon">
         </div>
@@ -48,7 +48,7 @@
             <p class="card__previous">Previous - 7hrs</p>
           </div>
         </div>
-      </div>
+      </div> -->
 
     </section>
   </main>
